tests/invalid/generated_binop_mod_bytes_float/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytes = b"hello"
    y: float = 1.0
    z = x % y
